# foundry-samples-modified

./: .gitignore  SUPPORT.md  
.devcontainer/: devcontainer.json  init.sh
.github/: CODEOWNERS
.github/scripts/: mirror-back.sh
.github/workflows/: mirror-back.yml  redirect-pull-requests.yml
ci/: LKG-MANIFEST-SCHEMA.md  azure-pipelines.yml  test-schema.sh  validation-manifest-example.json  validation-manifest.schema.json
infrastructure/infrastructure-setup-bicep/00-basic/: README.md
infrastructure/infrastructure-setup-bicep/01-connections/: connection-storage-account.bicep  connection-storage-account.json  foundry-modelgateway-connection-apikey.bicep
migration/: Dockerfile  README.md  migrate-docker.ps1  migrate-docker.sh  migrate.ps1  migrate.sh  run-migration-docker-auth.ps1  run-migration-docker-auth.sh  v1_to_v2_migration.py
sample-configs/: foundry-samples.yaml  test-data.yaml
samples/: agent-test.yaml  foundry-samples.yaml  input-data.yaml  service-setup.yaml
samples-mistral/: README.md
samples-mistral/python/: env.example  mistral-docai-ocr-4-0-post-release-checks.ipynb  test_mistral_docai_4_0.py
samples/python/foundry-autopilot-agent/src/hello_world_a365_agent/: .dockerignore  .env.example  agent.py  email_channel_compat.py  host_agent_server.py  pyproject.toml  requirements.txt
samples/python/foundry-autopilot-agent/src/hello_world_a365_agent/foundry-infra/: Dockerfile
samples/python/hosted-agents/agent-framework/responses/14-browser-automation-agent/: .env.example  Dockerfile  README.md  agent.manifest.yaml  agent.yaml  azure.yaml  pyproject.toml  requirements.txt
samples/python/hosted-agents/agent-framework/responses/14-browser-automation-agent/docs/: sample-structure.md
samples/python/hosted-agents/agent-framework/responses/14-browser-automation-agent/prompts/: base.md
samples/python/hosted-agents/agent-framework/responses/14-browser-automation-agent/skills/azure-playwright-browser-automation/: SKILL.md
samples/python/hosted-agents/agent-framework/responses/14-browser-automation-agent/src/bat-python-maf/: .dockerignore  Dockerfile  requirements.txt
samples/python/hosted-agents/agent-framework/responses/14-browser-automation-agent/src/bat-python-maf/prompts/: base.md
samples/python/hosted-agents/agent-framework/responses/14-browser-automation-agent/src/bat-python-maf/utils/: __init__.py  agent_factory.py  tools.py
samples/python/hosted-agents/agent-framework/responses/14-browser-automation-agent/src/browser-automation-agent-sample-foundry/: requirements.txt
samples/python/hosted-agents/agent-framework/responses/14-browser-automation-agent/src/browser-automation-python-maf-sample-foundry/: .env.example  .gitignore  main.py
samples/python/hosted-agents/agent-framework/responses/14-browser-automation-agent/src/browser-automation-python-maf-sample-foundry/utils/: settings.py
samples/python/hosted-agents/agent-framework/responses/14-browser-automation-agent/src/browser_automation_agent_sample_foundry/: agent_factory.py  main.py  paths.py  settings.py  tools.py
samples/python/hosted-agents/agent-framework/responses/14-browser-automation-agent/utils/: agent_factory.py  logging.py  paths.py  tools.py
samples/rust/foundry-local/audio-transcription-example/: Cargo.toml  README.md  sample.yaml
samples/rust/foundry-local/embeddings/: Cargo.toml  README.md  sample.yaml
samples/rust/foundry-local/tool-calling-foundry-local/: Cargo.toml  README.md  sample.yaml
samples/rust/foundry-local/tutorial-tool-calling/: Cargo.toml  README.md  sample.yaml
scripts/: README.md  remove-unvalidated-samples.sh  resolve-sample-configs.sh  validate-csharp.sh  validate-samples.sh  validate-single-sample.sh
tools/: .gitignore  README.md
tools/.devcontainer/: devcontainer.json
tools/.github/: CODEOWNERS
tools/ci/: README.md  azure-pipelines.yml
tools/sample-configs/: default-samples.yaml  foundry-samples.yaml
tools/samples/: input-data.yaml
tools/scripts/: publish-configs.sh  resolve-sample-configs.sh  validate-samples.sh  validate-single-sample.sh
tools/validation-config-defaults/: javascript.json
validation-config-defaults/: csharp.json  go.json  java.json  python.json
(+1517 files in other folders)
