[package]
name = "audio-transcription-example"
version = "0.1.0"
edition = "2021"
description = "Audio transcription example using the Foundry Local Rust SDK"

[dependencies]
foundry-local-sdk = "1.2"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tokio-stream = "0.1"

[target.'cfg(windows)'.dependencies]
foundry-local-sdk = { version = "1.2", features = ["winml"] }
