[project]
name = "hello-world-a365-agent"
version = "0.1.0"
description = "Foundry A365 hello-world digital worker agent (Python)."
authors = [{ name = "Microsoft", email = "support@microsoft.com" }]
requires-python = ">=3.11"
dependencies = [
    # Microsoft 365 Agents SDK (hosting + bot protocol)
    "microsoft-agents-hosting-aiohttp",
    "microsoft-agents-hosting-core",
    "microsoft-agents-authentication-msal",
    "microsoft-agents-activity",
    # Microsoft Agent 365 SDK — notifications + observability
    "microsoft_agents_a365_observability_core>=0.1.0",
    "microsoft_agents_a365_runtime>=0.1.0",
    "microsoft_agents_a365_notifications>=0.1.0",
    "microsoft-opentelemetry>=0.1.0a3",
    # Azure SDK
    "azure-identity>=1.17.0",
    "azure-keyvault-secrets>=4.8.0",
    "azure-monitor-opentelemetry>=1.6.0",
    # HTTP / web stack — the agent calls the Azure OpenAI Responses API
    # directly over HTTP via httpx; no agent_framework dependency.
    "aiohttp>=3.10",
    "httpx>=0.24.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "typing-extensions>=4.0.0",
]

[project.scripts]
hello-world-a365-agent = "hello_world_a365_agent.main:main"

[tool.uv]
prerelease = "allow"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["hello_world_a365_agent"]
