[project]
name = "browser-automation-agent-sample-foundry"
version = "0.1.0"
description = "Foundry-hosted browser automation agent sample."
requires-python = ">=3.11"
dependencies = [
    "agent-framework-core==1.2.2",
    "agent-framework-foundry>=1.2.2,<1.3",
    "agent-framework-foundry-hosting>=1.0.0a260429,<1.1",
    "azure-identity>=1.19.0",
    "httpx>=0.28.0",
    "mcp>=1.24.0,<2",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "websockets>=14.0",
]

[project.scripts]
browser-automation-agent-sample-foundry = "browser_automation_agent_sample_foundry.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/browser_automation_agent_sample_foundry"]

[tool.uv]
package = true
